--- a/osa2/src/index.css
+++ b/osa2/src/index.css
@@ -1,5 +1,5 @@
 .deleteNotification {
-    color: green;
+    color: rgb(222, 10, 10);
     background: lightgrey;
     padding-top: 5px;
     font-size: 20px;
@@ -30,4 +30,15 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+}
+
+.errorNotification{
+    color: rgb(254, 3, 3);
+    background: lightgrey;
+    padding-top: 5px;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px; 
 }
